# http_server

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Readme.md  build.ninja  cmake_install.cmake
include/: config.h  file.h  http.h  log.h  platform.h  platform_signal.h  platform_threading.h  server.h  thread_pool.h
src/: config.c  file.c  http.c  http_server.c  log.c  main.c  server.c  signal.c  thread_pool.c
tests/: attest.h  test_http_server.c
www/: about.html  index.html  resp.json  style.css  test.txt
